Reorganized and updated readme and simulation notebook.

--- a/bd_simu.ipynb
+++ b/bd_simu.ipynb
@@ -4,30 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BD simulation and EW-DLS\n",
+    "# Brownian-Langevin simulation and evanescent wave dynamic light scattering\n",
     "---\n",
+    "This is a simulation of near wall diffusion and flow as seen by the experimental technique of evanescent wave dynamic light scattering (EW-DLS) [[1-3]](#1).\n",
     "\n",
-    "This is a simulation of near wall diffusion and flow as seen by the experimental technique of evanescent wave dynamic light scattering (EW-DLS) [2-4].\n",
-    "\n",
-    "## DLS\n",
-    "DLS (also known as photon correlation spectroscopy, PCS) is a technique routinely used to characterize small particles such as polymers and colloids [1]. In particular, the diffusion coefficient (proportional to a hydrodynamic radius) of the particles in a medium is measured.  Through careful measurement and modeling information such as internal structure and interactions can be recovered.\n",
-    "\n",
-    "## EW-DLS\n",
-    "EW-DLS is variation of the technique where a total internal reflection evanescent field is used to probe dynamics within one wavelength of light of an interface [2]. From the localization of the probe results that effects due to interactions of the particles with the wall can be measured.\n",
-    "\n",
-    "EW-DLS can be used to measure flow with very strong near wall sensitivity [3-4]. This is potentially useful for the study of dynamic interactions between a complex fluid and the wall. An example of this is the characterization of the boundary condition at the interface with the solid wall (mainly the presence of slip and its quantification [4-5]).\n",
-    "\n",
-    "## Multiple tau correlator\n",
-    "DLS traditionally makes use of the multiple-tau correlator that allows calculation of a correlation function over several decades of time with limited resources. Its working principle is the calculation of the correlation at points spread almost linearly in a logarithmic scale. \n",
-    "\n",
-    "The correlator used here was adapted from the code by J. Ramírez [6].\n",
-    "\n",
-    "[1] https://en.wikipedia.org/wiki/Dynamic_light_scattering  \n",
-    "[2] Light scattering near and from interfaces using evanescent wave and ellipsometric light scattering https://doi.org/10.1016/j.cocis.2009.08.004  \n",
-    "[3] Near-field laser Doppler velocimetry measures near-wall velocities https://doi.org/10.1140/epje/i2012-12062-5  \n",
-    "[4] Near wall velocimetry on a rheometer https://doi.org/10.1122/1.5047020  \n",
-    "[5] https://en.wikipedia.org/wiki/No-slip_condition  \n",
-    "[6] https://doi.org/10.1063/1.3491098\n"
+    "[1] Light scattering near and from interfaces using evanescent wave and ellipsometric light scattering <a name=\"1\">https://doi.org/10.1016/j.cocis.2009.08.004</a>  \n",
+    "[2] Near-field laser Doppler velocimetry measures near-wall velocities <a name=\"2\">https://doi.org/10.1140/epje/i2012-12062-5  </a>  \n",
+    "[3] Near wall velocimetry on a rheometer <a name=\"3\">https://doi.org/10.1122/1.5047020   </a>"
    ]
   },
   {
@@ -217,6 +200,20 @@
     "class Simulation:\n",
     "    \n",
     "    def __init__(self,n=100, steps= 0,D=0.005 ,rate=0.001, v0=0.0,zBox=40.0, xBox=100.0, dt=1.0, R=1.0, dp=2, angle=90,l=1.0, ld=0.0, polydispersity = 0.1):\n",
+    "        \"\"\"\n",
+    "        n = number of particles\n",
+    "        steps = number of steps to run when instantiating\n",
+    "        dp = penetration depth of EW\n",
+    "        R = radius of particles\n",
+    "        xBox and yBox = box dimensions\n",
+    "        dt = time step\n",
+    "        v0 = slip velocity\n",
+    "        D = bulk diffusion coefficient\n",
+    "        rate = shear rate\n",
+    "        polydispersity= polydispersity of the particl radius\n",
+    "        angle = detection angle or scattering angle\n",
+    "        \n",
+    "        \"\"\"\n",
     "        self.ld = ld\n",
     "        self.dp = dp\n",
     "        self.dp *= R\n",
@@ -289,8 +286,8 @@
    "source": [
     "# SIMULATIONS\n",
     "\n",
-    "Note that the simulations will run faster if ran locally or without the display.\n",
-    "You can use the ```Simulation.step()``` method to run the step without display."
+    "You can use the ```Simulation.step()``` method to run the step without display.  \n",
+    "To run on a seperate window (will not work on Binder) change ```%matplotlib notebook``` to ```%matplotlib qt5```.\n"
    ]
   },
   {
@@ -2113,13 +2110,6 @@
     "\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
